--- a/currency/src/App.css
+++ b/currency/src/App.css
@@ -8,12 +8,12 @@
   box-sizing: border-box;
 }
 .body{
-  background-image: url("https://wallpapercosmos.com/w/full/6/b/1/44741-1920x1080-desktop-full-hd-cryptocurrency-wallpaper-image.jpg");
+  background-image: url("https://image.freepik.com/free-vector/indian-rupee-coins-background-with-text-space_1017-17452.jpg");
   background-position: 100% 100%;
   background-size: cover;
   background-repeat: no-repeat;
   width: 100%;
-  height: 650px;
+  height: 750px;
   /* text-align: center; */
 }
 
@@ -30,12 +30,13 @@
    position: relative;
    top: 10%;
    bottom: 50%;
-  width: 400px;
+  width: 450px;
   margin: auto;
   padding: 20px;
   /* border: 1px solid #ddd;   */
   border-radius: 8px;
-  background: linear-gradient(45deg, #123a5f, #274952, #979e9e, #180f91);
+  background-color: rgb(162, 162, 94);
+  /* background: linear-gradient(45deg, #123a5f, #274952, #979e9e, #180f91); */
   background-size: 200% 200%;
   animation: shimmer 2s infinite;
   transition: transform 0.3s, background-color 0.3s;
@@ -73,7 +74,7 @@ input {
 }
 
 button {
-  background-color: #4caf50;
+  background-color: red;
   color: white;
   padding: 10px;
   border: none;
